# YouTube-Insights

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
faiss_index/This Quran verse will find you when you need it most..mp3/: index.faiss  index.pkl
src/: downloader.py  embeddings.py  pipeline.py  qa_chain.py  summarizer.py  transcriber.py  utils.py
transcriptions/: Every decision you make, opens a new destiny for you - Ousama Alshurafa.mp3.json  Local AI Transcript Using Ollama, DeepSeek, Faster Whisper, and Python.json  This Quran verse will find you when you need it most..mp3.json
